--- a/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
+++ b/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
@@ -4,7 +4,7 @@ author:
   - Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University,
   - <a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Michael Meehan</a>, Australian Institute of Tropical Health & Medicine, James Cook University and
   - <a href="http://www.tropmedres.ac/wirichada-pan-ngum">Wirichada Pan-Ngum</a>, Department of Tropical Hygiene, Faculty of Tropical Medicine, Mahidol University.
-  - Presented by <a href="https://research.monash.edu/en/persons/michael-lydeamore>Michael Lydeamore</a>, Department of Econometrics and Business Statistics, Monash University
+  - Presented by <a href="https://research.monash.edu/en/persons/michael-lydeamore">Michael Lydeamore</a>, Department of Econometrics and Business Statistics, Monash University
 output: 
   html_document:
      self_contained: yes
