--- a/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
+++ b/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
@@ -1,10 +1,11 @@
 ---
-title: "COVID-19 Modelling in R"
+title: "Modelling an outbreak - COVID-19 in Thailand"
 author:
     - Thanks to <a href="http://www.tropmedres.ac/researchers/researcher/lisa-white">Lisa White</a>, Nuffield Department of Medicine, Oxford University,
-    - <a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a>, Australian Institute of Tropical Health & Medicine, James Cook University and
-    - Adapted and presented by <a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Emma McBryde</a>, Australian Institute of Tropical Health & Medicine, James Cook University
-    - July 2022
+    - <a href="https://research.jcu.edu.au/portfolio/michael.meehan1/">Michael Meehan</a>, and <a href="https://research.jcu.edu.au/portfolio/emma.mcbryde">Emma McBryde</a>, Australian Institute of Tropical Health & Medicine, James Cook University.
+    - Adapted and presented by [Eamon Conway](https://github.com/EamonConway), The Walter and Eliza Hall Institute, Melbourne.
+date: March 2023
+date-format: MMMM YYYY
 output:
     html_document:
         self_contained: yes
